--- a/index.html
+++ b/index.html
@@ -289,7 +289,8 @@
                 <i class="fab fa-instagram"></i>
             </a>
         </div>
-        <p>© 2024 The Slip Bar and Eatery. All Rights Reserved.</p>
+        <p>© 2024 The Slip Bar and Eatery.</p>
+        <p> All Rights Reserved.</p>
         <p>info@theslipbar.com</p>
     </footer>
 
