--- a/lomita.html
+++ b/lomita.html
@@ -28,7 +28,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" href="homepage.html">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="about.html">About</a>
@@ -169,7 +169,8 @@
                 <i class="fab fa-instagram"></i>
             </a>
         </div>
-        <p>© 2024 The Slip Bar and Eatery. All Rights Reserved.</p>
+        <p>© 2024 The Slip Bar and Eatery. 
+        <p>All Rights Reserved.</p>
         <p>info@theslipbar.com</p>
     </footer>
 
