--- a/lomita.html
+++ b/lomita.html
@@ -120,7 +120,9 @@
           424.376.6947
         </p>
         <p>
-          24503 Narbonne Ave, Lomita, CA 90717
+          24503 Narbonne Avenue
+        </p>
+        <p>Lomita, CA 90717</p>
         <p>
           Opens at 4pm Monday, Tuesday, Wednesday and Noon Friday & Saturday. 10am on Sundays!
         </p>
