--- a/event.html
+++ b/event.html
@@ -14,6 +14,8 @@
         integrity="sha384-mQ9vPWW95Napaa3aBF8nnWZQKfd8lXsYXnbGrvD73UEz1qUHvR1qqEFtY8x4ePE" crossorigin="anonymous">
     <link rel="stylesheet" href="css/css/all.min.css">
     <script src="page.js"></script>
+    <script data-cfasync="false" data-tockify-script="embed"
+<script src="https://public.tockify.com/browser/embed.js"></script>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -109,39 +111,10 @@
         </a>
       </div>
     </section>
-
-    <section class="about-section">
-      <article>
-        <p>
-          The Slip Lomita       
-        </p>
-        <p>
-          424.376.6947
-        </p>
-        <p>
-          24503 Narbonne Avenue
-        </p>
-        <p>Lomita, CA 90717</p>
-        <p>
-          Opens at 4pm Monday, Tuesday, Wednesday and Noon Friday & Saturday. 10am on Sundays!
-        </p>
-      </article>
-      <!-- <article>
-        <div class="order-now-btn">
-          <a href="menu.html">
-            <button class="btn btn-primary btn-lg" id="order-now-btn">Order Now</button>
-          </a>
-        </div>
-      </article> -->
-      <div class="food-menu">
-        <h2> Menu </h2>
-        <div class="Menu-container">
-          <!-- Embed PDF here -->
-          <img src="./menus/lomitamenupage2.jpg" type="application/pdf" width="100%" height="600px" /> 
-  
-        <img src="./menus/lomitamenupage1.jpg" type="application/pdf" width="100%" height="600px" /> 
-    
-      </div>
+<section class="tockify-calendar">
+   <div data-tockify-calendar="spirited" data-tockify-component="calendar"></div>
+div data-tockify-component="calendar"
+  data-tockify-path="/spirited/detail/557/1449050400000"></div>
       </section>
       <!-- </div>
           <p>
