--- a/event.html
+++ b/event.html
@@ -65,6 +65,8 @@
         </script>
     
     <header>
+        <h1> Check out all of our amazingly fun events @Lomita and @RedondoBeach!</h1>
+        <p> Give us follow @theslipbar Instagram or our Facebook Community Page for the most up-to-date info on everything we have going on at The Slip! </p>
       <div class="logo-container">
         <img class="logo" src="img/thesliplomitaaddresslogo.png" alt="Restaurant Logo" />
       </div>
