--- a/lomita.html
+++ b/lomita.html
@@ -113,16 +113,14 @@
 
     <section class="about-section">
       <article>
-        <p>
+        <h1>
           The Slip Lomita       
-        </p>
+        </h1>
         <p>
           424.376.6947
         </p>
         <p>
-          24503 Narbonne Avenue
-        </p>
-        <p>Lomita, CA 90717</p>
+          24503 Narbonne Avenue, Lomita, CA 90717</p>
         <p>
           Opens at 4pm Monday, Tuesday, Wednesday and Noon Friday & Saturday. 10am on Sundays!
         </p>
