--- a/lomita.html
+++ b/lomita.html
@@ -63,14 +63,27 @@
             }
         </script>
     
-    <header>
+    <!--header>
       <div class="logo-container">
         <img class="logo" src="img/lomitalogo.png" alt="Restaurant Logo" />
       </div>
-    </header>
+    </header>-->
 
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
       <!-- Carousel content -->
+    
+                    <div class="locations-container">
+                        <section id="locations">
+                            <div class="location">
+                                <a href="redondo-beach.html">
+                                    <div class="location">
+                                        <span>Redondo Beach</span>
+                                    </div>
+                                </a>
+                            </div>
+                        l
+                        </section>
+                    </div>
            <div class="carousel-inner">
         <div class="carousel-item active">
           <img src="img/lomitacarosel.jpeg" class="d-block w-100" alt="food" />
