--- a/lomita.html
+++ b/lomita.html
@@ -75,9 +75,9 @@
                     <div class="locations-container">
                         <section id="locations">
                             <div class="location">
-                                <a href="redondo-beach.html">
+                                <a href="lomita.html">
                                     <div class="location">
-                                        <span>Redondo Beach</span>
+                                        <span>Lomita</span>
                                     </div>
                                 </a>
                             </div>
