--- a/lomita.html
+++ b/lomita.html
@@ -73,11 +73,14 @@
       <!-- Carousel content -->
     
                     <div class="locations-container">
+                        <style> 
+  background-color: rgba(255, 255, 255, 0.6);</style>
                         <section id="locations">
                             <div class="location">
                                 <a href="lomita.html">
                                     <div class="location">
                                         <span>Lomita</span>
+            
                                     </div>
                                 </a>
                             </div>
