--- a/lomita.html
+++ b/lomita.html
@@ -74,7 +74,8 @@
     
                     <div class="locations-container">
                         <style> 
-  background-color: rgba(255, 255, 255, 0.2);</style>
+  background-color: rgba(255, 255, 255, 0.7);
+transform: translateY(-150%);</style>
                         <section id="locations">
                             <div class="location">
                                 <a href="lomita.html">
