--- a/lomita.html
+++ b/lomita.html
@@ -74,13 +74,13 @@
     
                     <div class="locations-container">
                         <style> 
-  background-color: rgba(255, 255, 255, 0.7);
-transform: translateY(-150%);</style>
+  background-color: rgba(255, 255, 255, 0.5);
+transform: translateY(-100%);</style>
                         <section id="locations">
                             <div class="location">
                                 <a href="lomita.html">
                                     <div class="location">
-                                        <span>Lomita</span>
+                                        <span>The Slip Lomita</span>
                                     </div>
                                 </a>
                             </div>
