--- a/lomita.html
+++ b/lomita.html
@@ -75,7 +75,7 @@
                     <div class="locations-container">
                         <style> 
   background-color: rgba(255, 255, 255, 0.5);
-transform: translateY(-100%);</style>
+transform: translateY(-95%); color: #333; </style>
                         <section id="locations">
                             <div class="location">
                                 <a href="lomita.html">
