--- a/lomita.html
+++ b/lomita.html
@@ -73,14 +73,20 @@
       <!-- Carousel content -->
     
                     <div class="locations-container">
-                        <style> 
-  background-color: rgba(255, 255, 255, 0.5);
-transform: translateY(-95%); color: #333; </style>
+                        <style> color: #333; </style>
                         <section id="locations">
                             <div class="location">
                                 <a href="lomita.html">
                                     <div class="location">
                                         <span>The Slip Lomita</span>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="location">
+                                <a href="lomita.html">
+                                    <div class="location">
+                                        <span>24503 Narbonne Ave, Lomita, CA 90717</span>
+                                        <style> Font-size: small; </style>
                                     </div>
                                 </a>
                             </div>
