--- a/lomita.html
+++ b/lomita.html
@@ -86,7 +86,7 @@
                                 <a href="lomita.html">
                                     <div class="location">
                                         <span>24503 Narbonne Ave, Lomita, CA 90717</span>
-                                        <style> Font-size: small; </style>
+                                        <style "Font-size: small;">
                                     </div>
                                 </a>
                             </div>
