--- a/lomita.html
+++ b/lomita.html
@@ -73,7 +73,7 @@
       <!-- Carousel content -->
     
                     <div class="locations-container">
-                        <style> color: #333; </style>
+                        <style> .locations-container {background-color: rgba(255, 255, 255, 0.1); color: #333";} </style>
                         <section id="locations">
                             <div class="location">
                                 <a href="lomita.html">
