--- a/lomita.html
+++ b/lomita.html
@@ -74,7 +74,7 @@
     
                     <div class="locations-container">
                         <style> .locations-container {background-color: rgba(255, 255, 255, 0.3
-                        ); color: #333; z-index: 100;" </style>
+                        ); color: #333; z-index: 100;}</style>
                         <section id="locations">
                             <div class="location">
                                 <a href="lomita.html">
@@ -125,8 +125,9 @@
         <p> 424.376.6947
         </p>
         <p>
-          24503 Narbonne Avenue, Lomita, CA 90717
-        font-family: "Roboto; font-size: 14px;"</style></p> 
+          24503 Narbonne Avenue, Lomita, CA 90717 
+        p {font-family: "Roboto; 
+        font-size: 14px;} </style></p> 
         <p>
           Opens at 4pm Monday, Tuesday, Wednesday and Noon Friday & Saturday. 10am on Sundays!
         </p>
