--- a/lomita.html
+++ b/lomita.html
@@ -124,6 +124,7 @@
       <article>
         <p> 424.376.6947
         </p>
+        <style>
         <p>
           24503 Narbonne Avenue, Lomita, CA 90717 
         p {font-family: "Roboto; 
@@ -131,6 +132,8 @@
         <p>
           Opens at 4pm Monday, Tuesday, Wednesday and Noon Friday & Saturday. 10am on Sundays!
         </p>
+    
+        
       </article>
       <!-- <article>
         <div class="order-now-btn">
