--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
                 <ul class="navbar-nav">
                     <li class="social-links">
                         <a href="https://www.facebook.com/theslipbar/" target="_blank">
-                            <i class="fab fa-facebook"></i>
+                            <i class="fa-brands fa-facebook"></i>
                     </a>
                     <a href="https://www.instagram.com/theslipbar/" target="_blank">
-                        <i class="fab fa-instagram"></i>
+                       <i class="fa-brands fa-instagram"></i>
                     </a>
 
                     <li class="nav-item active">
