--- a/contact.html
+++ b/contact.html
@@ -40,6 +40,8 @@
         <a href="https://www.instagram.com/theslipbar/" target="_blank">
           <i class="fab fa-instagram"></i>
         </a>
+        <a href="mailto: info@theslipbar.com>" <i class="fa-regular fa-envelope"></i>
+          </a>
       </div>
       <div class="footer-links">
         <a href="index.html">Home</a>
