--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         integrity="sha384-mQ9vPWW95Napaa3aBF8nnWZQKfd8lXsYXnbGrvD73UEz1qUHvR1qqEFtY8x4ePE" crossorigin="anonymous">
     <link rel="stylesheet" href="css/css/all.min.css">
     <link rel="stylwsheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha384-mQ9vPWW95Napaa3aBF8nnWZQKfd8lXsYXnbGrvD73UEz1qUHvR1qqEFtY8x4ePE" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/66e3b9468c.js" crossorigin="anonymous"></script>
     <script src="page.js"></script>
 
 <body>
