--- a/index.html
+++ b/index.html
@@ -295,6 +295,9 @@
                 <a href="https://www.facebook.com/theslipbar/" target="_blank">
                     <i class="fab fa-facebook"></i>
             </a>
+            <a href="mailto: info@theslipbar.com>" <i class="fa-regular fa-envelope"></i>
+          </a>
+      </div>
             <a href="https://www.instagram.com/theslipbar/" target="_blank">
                 <i class="fab fa-instagram"></i>
             </a>
