--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="social-links">
-                        <a href="https://www.facebook.com/theslipbar/" target="_blank">
-                            <i class="fa-brands fa-facebook"></i>
+                        <FontAwesomeIcon icon="fa-brands fa-facebook" />
+                 <FontAwesomeIcon icon="fa-brands fa-square-instagram" />
                     </a>
                     <a href="https://www.instagram.com/theslipbar/" target="_blank">
                        <i class="fa-brands fa-instagram"></i>
