--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylwsheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha384-mQ9vPWW95Napaa3aBF8nnWZQKfd8lXsYXnbGrvD73UEz1qUHvR1qqEFtY8x4ePE" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/66e3b9468c.js" crossorigin="anonymous"></script>
     <script src="page.js"></script>
+    <script data-search-pseudo-elements src="https://kit.fontawesome.com/f737751420.js" crossorigin="anonymous"></script>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light"> 
@@ -29,10 +30,15 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="social-links">
-                        <FontAwesomeIcon icon="fa-brands fa-facebook" />
+                    <li class="nav-
+                        <
+                    <FontAwesomeIcon icon="fa-brands fa-facebook" />
+                    .facebook {
+  @include fa-icon-brands($fa-var-facebook);
+}
                  <FontAwesomeIcon icon="fa-brands fa-square-instagram" />
                     </a>
+                    
                     <a href="https://www.instagram.com/theslipbar/" target="_blank">
                        <i class="fa-brands fa-instagram"></i>
                     </a>
