--- a/redondo-beach.html
+++ b/redondo-beach.html
@@ -77,9 +77,9 @@
         <div class="carousel-item">
           <img src="img/slipredondo-exterior.jpeg" class="d-block w-100" alt="food" />
         </div>
-        <!-- <div class="carousel-item">
+        <div class="carousel-item">
           <img src="img/full2.jpeg" class="d-block w-100" alt="food" />
-        </div> -->
+        </div>
       </div>
       <a
         class="carousel-control-prev"
