--- a/redondo-beach.html
+++ b/redondo-beach.html
@@ -83,14 +83,13 @@
                 </div>
            <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="img/lomitacarosel.jpeg" class="d-block w-100" alt="food" />
+          <img src="img/homepage.png" class="d-block w-100" alt="food" />
         </div>
-  
-        class="carousel-control-prev"
-        href="#carouselExampleControls"
-        role="button"
-        data-slide="prev"
-      >
+        <div class="carousel-item">
+          <img src="img/sliptredondo-exterior-2.jpeg" class="d-block w-100" alt="food" />
+        </div>
+        </div>
+
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
       </a>
@@ -100,11 +99,15 @@
         role="button"
         data-slide="next"
       >
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
-    </div>
+      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
 
     <section class="button-section">
       <div class="order-now-btn">
@@ -117,8 +120,13 @@
     <section class="about-section">
       <article>
         <p>
+          The Slip Redondo Beach       
+        </p>
+        <p>
           310.376.8910
         </p>
+        <p>
+          120 N International Boardwalk, Redondo Beach, CA 90277
         <p>
           Opens at Noon - Monday through Saturday and 10 am on Sundays
         </p>
