--- a/redondo-beach.html
+++ b/redondo-beach.html
@@ -125,9 +125,9 @@
         <p>
           310.376.8910
         </p>
-        <!--p>
-          120 N International Boardwalk, Redondo Beach, CA 90277
-        <p>
+          
+        <p>Hours</p>
+        </p>
           Opens at Noon - Monday through Saturday and 10 am on Sundays
         </p>
       </article>
