--- a/redondo-beach.html
+++ b/redondo-beach.html
@@ -120,13 +120,14 @@
     <section class="about-section">
       <article>
         <p>
-          The Slip Redondo Beach       
+          Phone:       
         </p>
         <p>
           310.376.8910
         </p>
           
-        <p>Hours</p>
+        <p>
+            Hours:
         </p>
           Opens at Noon - Monday through Saturday and 10 am on Sundays
         </p>
