--- a/redondo-beach.html
+++ b/redondo-beach.html
@@ -119,18 +119,12 @@
 
     <section class="about-section">
       <article>
-        <h2>
-          Phone:       
-        </h2>
+        <h2>Phone:</h2>
         <p>
           310.376.8910
         </p>
-          
-        <h2>
-            Hours:
-        </h2>
-          Opens at Noon - Monday through Saturday and 10 am on Sundays
-        </p>
+        <h2>Hours:</h2>
+        <p>Opens at Noon - Monday through Saturday and 10 am on Sundays!</p>
       </article>
       <!-- <article>
         <div class="order-now-btn">
