--- a/lomita.html
+++ b/lomita.html
@@ -120,8 +120,10 @@
 
     <section class="about-section">
       <article>
+        <h2> Phone:</h2>
         <p> 424.376.6947
         </p>
+        <h2> Hours:</h2>
         <p>
           Opens at 4pm Monday, Tuesday, Wednesday and Noon Friday & Saturday. 10am on Sundays!
         </p>
